[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.8.2", features = ["sha2"] }
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1.4.0"
serde_json = "1.0.96"
